--- a/joinmarket/src/components/Maker.css
+++ b/joinmarket/src/components/Maker.css
@@ -1,13 +1,7 @@
-.heading {
-  color: rgb(15, 3, 58);
-  font-size: 40px;
-  font-weight: 450;
-}
-
 .form1 {
   margin: 0 auto;
   background-color: rgb(244, 247, 253);
-  width: 40%;
+  width: 50%;
   padding-top: 40px;
   padding-bottom: 40px;
   padding-left: 40px;
@@ -16,23 +10,28 @@
   border-width: 3px;
   border-style: dashed;
   border-color: #e0e3f0;
+
 }
 
-.center {
+.coinjoin{
+  font-size: 20px;
+}
+
+.center{
   padding: 40px;
 }
 
-.label {
+.label{
   text-align: left;
   font-size: 20px;
   color: rgb(15, 3, 58)
 }
 
-.field {
+.field{
   padding-top: 20px;
 }
 
-.field-border {
+.field-border{
   border-radius: 10px;
   border-width: 2px;
   border-style: dashed;
