--- a/src/components/Balance.module.css
+++ b/src/components/Balance.module.css
@@ -32,6 +32,8 @@
   -webkit-font-feature-settings: 'kern' on;
   -o-font-feature-settings: 'kern' on;
 
+  padding-left: 0.2em;
+
   /* There seems to be some unneeded extra padding on the bottom of the sat
   symbol which this margin is supposed to cancel out. */
   margin-bottom: -0.1em;
