feat: setup code formatting (#21)
* Install prettier

* Install husky

* Add npm lint and format scripts

* Format files

* Remove unused import

* Setup prettier config

* Update line width

* Update package.json

Co-authored-by: d11n <mail@dennisreimann.de>

* Reformat

Co-authored-by: d11n <mail@dennisreimann.de>

--- a/src/components/Balance.module.css
+++ b/src/components/Balance.module.css
@@ -23,7 +23,7 @@
 }
 
 .satoshi-symbol {
-  font-family: "Satoshi Symbol";
+  font-family: 'Satoshi Symbol';
   font-weight: 400;
   text-rendering: optimizeLegibility;
   font-feature-settings: 'kern' on;
