--- a/src/index.css
+++ b/src/index.css
@@ -221,50 +221,50 @@ main {
 }
 
 /* Theme overrides */
-:root[data-theme="dark"] {
-  --bs-body-color-rgb: 0,0,0;
-  --bs-body-bg-rgb: 33,37,41;
+:root[data-theme='dark'] {
+  --bs-body-color-rgb: 0, 0, 0;
+  --bs-body-bg-rgb: 33, 37, 41;
   --bs-body-color: var(--bs-white);
   --bs-body-bg: var(--bs-gray-900);
   --bs-gray-dark: #16191c;
   --bs-black: #000;
 }
 
-:root[data-theme="dark"] * {
+:root[data-theme='dark'] * {
   border-color: var(--bs-gray-800) !important;
 }
 
-:root[data-theme="dark"] .card {
+:root[data-theme='dark'] .card {
   background-color: var(--bs-gray-dark) !important;
   border-color: var(--bs-gray-dark) !important;
 }
 
-:root[data-theme="dark"] .btn-dark {
+:root[data-theme='dark'] .btn-dark {
   background-color: var(--bs-gray-800);
   border-color: var(--bs-gray-800);
 }
 
-:root[data-theme="dark"] .btn-dark:hover {
+:root[data-theme='dark'] .btn-dark:hover {
   background-color: var(--bs-gray-dark);
   border-color: var(--bs-gray-dark) !important;
 }
 
-:root[data-theme="dark"] .accordion-item {
+:root[data-theme='dark'] .accordion-item {
   background: transparent !important;
 }
 
-:root[data-theme="dark"] .accordion-button,
-:root[data-theme="dark"] .btn-outline-dark {
+:root[data-theme='dark'] .accordion-button,
+:root[data-theme='dark'] .btn-outline-dark {
   color: var(--bs-white);
   background: transparent !important;
   border-color: var(--bs-gray-800);
 }
 
-:root[data-theme="dark"] .btn-outline-dark:hover {
+:root[data-theme='dark'] .btn-outline-dark:hover {
   background-color: var(--bs-gray-dark) !important;
   border-color: var(--bs-gray-dark) !important;
 }
 
-:root[data-theme="dark"] code {
+:root[data-theme='dark'] code {
   color: var(--bs-gray-300);
 }
