Add progress inidcators

--- a/src/index.css
+++ b/src/index.css
@@ -214,6 +214,8 @@ main {
   display: none;
 }
 
+/* Start Navbar Styles */
+
 .center-nav-link {
   font-weight: 600 !important;
 }
@@ -235,6 +237,37 @@ main {
     border-bottom: 2px solid black;
   }
 }
+
+.activity-indicator {
+  height: 6px;
+  width: 6px;
+  border-radius: 50%;
+}
+
+.activity-indicator-off {
+  background-color: #bbbbbb;
+}
+
+.activity-indicator-on {
+  animation-name: activity-indicator-pulse;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in;
+}
+
+@keyframes activity-indicator-pulse {
+  0% {
+    background-color: rgba(39, 174, 96, 0.2);
+  }
+  50% {
+    background-color: rgba(39, 174, 96, 1);
+  }
+  100% {
+    background-color: rgba(39, 174, 96, 0.2);
+  }
+}
+
+/* End Navbar Styles */
 
 /* Theme overrides */
 :root[data-theme='dark'] {
