--- a/src/index.css
+++ b/src/index.css
@@ -202,6 +202,15 @@ body,
   flex-direction: column;
 }
 
+#mainNav {
+  z-index: 1050;
+}
+
+#mainNav,
+.offcanvas-header {
+  height: 76px;
+}
+
 main {
   flex: 1;
 }
