--- a/src/index.css
+++ b/src/index.css
@@ -438,6 +438,23 @@ h2 {
   border-color: rgba(222, 222, 222, 1);
 }
 
+/* Wallets Styles */
+
+.wallets a.wallet-name {
+  text-decoration: none;
+  color: var(--bs-body-color);
+}
+
+.wallets a.wallet-name:hover {
+  text-decoration: underline;
+}
+
+.wallets .btn.btn-outline-dark {
+  padding: 0.25rem 1rem;
+  font-weight: 500;
+  border-color: rgba(222, 222, 222, 1);
+}
+
 /* Theme overrides */
 :root[data-theme='dark'] {
   --bs-body-color-rgb: var(--bs-white);
@@ -461,8 +478,7 @@ h2 {
 }
 
 :root[data-theme='dark'] .card {
-  background-color: var(--bs-gray-dark) !important;
-  border-color: var(--bs-gray-dark) !important;
+  border-color: var(--bs-gray-800) !important;
 }
 
 :root[data-theme='dark'] .btn-dark {
