--- a/src/index.css
+++ b/src/index.css
@@ -404,7 +404,7 @@ main {
 
 /* Send, Receive, Earn Styles */
 
-.number {
+.slashed-zeroes {
   font-family: Inter;
   font-weight: 400;
   font-feature-settings: 'tnum' on, 'lnum' on, 'zero' on, 'case' on;
