--- a/src/index.css
+++ b/src/index.css
@@ -396,6 +396,16 @@ main {
 
 /* Send, Receive, Earn Styles */
 
+.earn form input:not([type='checkbox']) {
+  height: 3.5rem;
+  width: 100%;
+}
+
+.earn form button {
+  height: 3rem;
+  width: 100%;
+}
+
 .slashed-zeroes {
   font-family: Inter;
   font-weight: 400;
