--- a/src/index.css
+++ b/src/index.css
@@ -465,8 +465,17 @@ main {
   background-color: transparent;
 }
 
+.receive .btn.btn-dark {
+  background-color: transparent !important;
+}
+
 .receive hr {
   background-color: rgba(222, 222, 222, 1);
+  opacity: 100%;
+}
+
+:root[data-theme='dark'] hr {
+  background-color: var(--bs-gray-800);
   opacity: 100%;
 }
 
@@ -560,6 +569,7 @@ h2 {
 }
 
 :root[data-theme='dark'] .card {
+  background-color: var(--bs-gray-900);
   border-color: var(--bs-gray-800) !important;
 }
 
