--- a/src/index.css
+++ b/src/index.css
@@ -325,7 +325,7 @@ main {
   }
 }
 
-.activity-indicator {
+.earn-indicator .activity-indicator {
   --size: 6px;
   position: absolute;
   right: calc(var(--size) * -1);
@@ -334,11 +334,11 @@ main {
   border-radius: 50%;
 }
 
-.activity-indicator-off {
+.earn-indicator .activity-indicator-off {
   background-color: #bbbbbb;
 }
 
-.activity-indicator-on {
+.earn-indicator .activity-indicator-on {
   animation-name: activity-indicator-pulse;
   animation-duration: 3s;
   animation-iteration-count: infinite;
