feat: add seed phrase backup confirmation during wallet creation (#156)
* Add seed phrase backup confirmation during wallet creation

* Refactor to use 12 inputs, add skip button and more improvements

* Add reset for no match message

* Move backup confirmation into own component

* Remove verify button, make reactive, disable on correct word and more

* Fix build error

* Fix declaration order

* Remove not needed prop and remove input feedback

* Add slashed zeroes styling and remove input padding

* Dry up code using daniels suggestions

* Remove unused callback

* Make seedword index fixed width

* Run npm install

* Run prettier

* Fix key locations

* Add more translations

* Update src/i18n/locales/en/translation.json

* Update src/components/CreateWallet.jsx

* Update src/i18n/locales/en/translation.json

* Update src/components/CreateWallet.jsx

* Apply suggestions from code review

Co-authored-by: Daniel <10026790+dnlggr@users.noreply.github.com>

--- a/src/index.css
+++ b/src/index.css
@@ -372,6 +372,10 @@ main {
   width: 2ch;
 }
 
+.seedword-index-backup {
+  width: 5ch;
+}
+
 .blurred-text {
   color: transparent;
   text-shadow: 0 0 15px var(--bs-gray-600);
