--- a/src/index.css
+++ b/src/index.css
@@ -444,6 +444,16 @@ input::-webkit-inner-spin-button {
   font-size: 0.9rem;
 }
 
+.send .frozen-warning {
+  color: #2d9cdb;
+  font-size: 0.8rem;
+}
+
+.send .frozen-warning a {
+  color: #2d9cdb;
+  font-size: 0.8rem;
+}
+
 .send select {
   height: 3.5rem;
   width: 100%;
