ui: adapt info alert color to match figma more closely

--- a/src/index.css
+++ b/src/index.css
@@ -459,6 +459,12 @@ h2 {
   box-shadow: none;
 }
 
+.alert-info {
+  color: var(--bs-white);
+  background-color: var(--bs-gray-800);
+  border-color: var(--bs-gray-900);
+}
+
 /* Privacy Level Styles */
 
 .privacy-level-4 {
